@@ -4,6 +4,11 @@ History
 Version 0.7.2 - Unreleased
 --------------------------
 
+- Allow pending subscriptions to be conformed by visiting the "My
+  subscriptions" page.  This allows users to confirm their
+  subscriptions even if they've lost or never received their message
+  for confirm.  [nouri]
+
 - More fine-tuning of the ``PloneCallHTMLFormatter``: Strip unwanted
   content like the review history in a configurable way.  [nouri]
 
